[gd_scene load_steps=4 format=1]

[ext_resource path="res://System/GAME.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]

resource/name = "FadeIn"
length = 0.25
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]

resource/name = "FadeOut"
length = 0.25
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="GAME" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Fader" type="ColorFrame" parent="."]

visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 160.0
color = Color( 1, 1, 1, 1 )

[node name="FaderAnim" type="AnimationPlayer" parent="Fader"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextBox" type="ColorFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 108.0
margin/right = 232.0
margin/bottom = 152.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="RichTextLabel" parent="TextBox"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 44.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = 0
percent_visible = 0.0

[node name="TextDelay" type="Timer" parent="TextBox"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="HP" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


